<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorFragment">

    <Button
        android:id="@+id/exitButton"
        android:layout_width="176dp"
        android:layout_height="57dp"
        android:text="@string/exitButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editNumberA"
        android:layout_width="274dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/numberA"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/editNumberB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <EditText
        android:id="@+id/editNumberB"
        android:layout_width="280dp"
        android:layout_height="58dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/numberB"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNumberA"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="279dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNumberB"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/plusButton"
        android:layout_width="83dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="A+B"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/plusButton2"
        android:layout_width="83dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="A+B"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plusButton" />

    <Button
        android:id="@+id/button3"
        android:layout_width="83dp"
        android:layout_height="51dp"
        android:text="Button"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/plusButton"
        app:layout_constraintTop_toTopOf="@+id/plusButton" />

    <Button
        android:id="@+id/button6"
        android:layout_width="83dp"
        android:layout_height="51dp"
        android:text="Button"
        app:layout_constraintEnd_toStartOf="@+id/button7"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/plusButton2"
        app:layout_constraintTop_toTopOf="@+id/plusButton2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="83dp"
        android:layout_height="51dp"
        android:text="Button"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toTopOf="@+id/plusButton" />

    <Button
        android:id="@+id/button7"
        android:layout_width="83dp"
        android:layout_height="51dp"
        android:text="Button"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toTopOf="@+id/button6" />

    <Button
        android:id="@+id/button5"
        android:layout_width="83dp"
        android:layout_height="51dp"
        android:layout_marginEnd="16dp"
        android:text="Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toTopOf="@+id/plusButton" />

    <Button
        android:id="@+id/button8"
        android:layout_width="83dp"
        android:layout_height="51dp"
        android:layout_marginEnd="16dp"
        android:text="Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toTopOf="@+id/button7" />

</androidx.constraintlayout.widget.ConstraintLayout>